# cpp_machinelearning

./: .gitignore  CMakeLists.txt  README.md  computeCost.cpp  example1.cpp  example1.h  gradientDescent.cpp  plotData.cpp
ex1/: example1.cpp  example1.h  gradientDescent.cpp  plotData.cpp
